@@ -1,0 +1,29 @@
+<?php
+// DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
+// This file was generated on 2010-12-31 13:46
+
+$extensionPath = t3lib_extMgm::extPath('extdeveval');
+return array(
+	'tx_extdevevaldevlinks' => $extensionPath . 'class.tx_extdeveval_additionalBackendItems.php',
+	'tx_extdeveval_exception' => $extensionPath . 'class.tx_extdeveval_exception.php',
+	'tx_extdeveval_alttopmenudummy' => $extensionPath . 'class.tx_extdeveval_fetchContentTopMenu.php',
+	'tx_extdeveval_apidisplay' => $extensionPath . 'mod1/class.tx_extdeveval_apidisplay.php',
+	'tx_extdeveval_buildautoloadregistry' => $extensionPath . 'mod1/class.tx_extdeveval_buildautoloadregistry.php',
+	'tx_extdeveval_cachefiles' => $extensionPath . 'mod1/class.tx_extdeveval_cachefiles.php',
+	'tx_extdeveval_calc' => $extensionPath . 'mod1/class.tx_extdeveval_calc.php',
+	'tx_extdeveval_cssanalyzer' => $extensionPath . 'mod1/class.tx_extdeveval_cssanalyzer.php',
+	'tx_extdeveval_highlight' => $extensionPath . 'mod1/class.tx_extdeveval_highlight.php',
+	'tx_extdeveval_iconlister' => $extensionPath . 'mod1/class.tx_extdeveval_iconlister.php',
+	'tx_extdeveval_ll2xml' => $extensionPath . 'mod1/class.tx_extdeveval_ll2xml.php',
+	'tx_extdeveval_llxmlsplit' => $extensionPath . 'mod1/class.tx_extdeveval_llxmlsplit.php',
+	'tx_extdeveval_phpdoc' => $extensionPath . 'mod1/class.tx_extdeveval_phpdoc.php',
+	'tx_extdeveval_rawedit' => $extensionPath . 'mod1/class.tx_extdeveval_rawedit.php',
+	'tx_extdeveval_sprites' => $extensionPath . 'mod1/class.tx_extdeveval_sprites.php',
+	'tx_extdeveval_submodgetll' => $extensionPath . 'mod1/class.tx_extdeveval_submodgetll.php',
+	'tx_extdeveval_tmpl' => $extensionPath . 'mod1/class.tx_extdeveval_tmpl.php',
+	'tx_extdeveval_tune_phpbeautify' => $extensionPath . 'mod1/class.tx_extdeveval_tunebeautify.php',
+	'tx_extdeveval_tunebeautify' => $extensionPath . 'mod1/class.tx_extdeveval_tunebeautify.php',
+	'tx_extdeveval_tunecode' => $extensionPath . 'mod1/class.tx_extdeveval_tunecode.php',
+	'tx_extdeveval_module1' => $extensionPath . 'mod1/index.php',
+);
+?>
